--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,26 @@
       <version>5.1.0</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.hjson</groupId>
+      <artifactId>hjson</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>3.3.3</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.10.3</version>
+    </dependency>
+
   </dependencies>
 <build>
 
