--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,24 @@
       <version>2.10.3</version>
     </dependency>
 
+    <dependency>
+      <groupId>io.undertow</groupId>
+      <artifactId>undertow-core</artifactId>
+      <version>2.0.30.Final</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.undertow</groupId>
+      <artifactId>undertow-servlet</artifactId>
+      <version>2.0.30.Final</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.undertow</groupId>
+      <artifactId>undertow-websockets-jsr</artifactId>
+      <version>2.0.30.Final</version>
+    </dependency>
+
   </dependencies>
 <build>
 
